--- a/Hello.v2/MainWindow.xaml
+++ b/Hello.v2/MainWindow.xaml
@@ -36,7 +36,7 @@
         </Grid>
         <Grid Name="a2" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Dog.jpg"/>
+                <ImageBrush ImageSource="Images/1/Dogs.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="a3" Visibility="Hidden">
@@ -149,7 +149,7 @@
         </Grid>
         <Grid Name="d2" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Dog.png"/>
+                <ImageBrush ImageSource="Images/4/Dogs.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="d3" Visibility="Hidden">
@@ -257,126 +257,126 @@
 
         <Grid Name="g1" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Cat.png"/>
+                <ImageBrush ImageSource="Images/7/Cat.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="g2" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Dog.png"/>
+                <ImageBrush ImageSource="Images/7/Dogs.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="g3" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Fox.png"/>
+                <ImageBrush ImageSource="Images/7/Fox.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="g4" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Horse.png"/>
+                <ImageBrush ImageSource="Images/7/Horse.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="g5" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Lion.png"/>
+                <ImageBrush ImageSource="Images/7/Lion.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="g6" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Monkey.png"/>
+                <ImageBrush ImageSource="Images/7/Monkey.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="g7" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Panda.png"/>
+                <ImageBrush ImageSource="Images/7/Panda.jpg"/>
             </Grid.Background>
         </Grid>
 
         <Grid Name="h1" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/camel.png"/>
+                <ImageBrush ImageSource="Images/8/camel.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="h2" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/crocodile.png"/>
+                <ImageBrush ImageSource="Images/8/crocodile.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="h3" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/elephant.png"/>
+                <ImageBrush ImageSource="Images/8/elephant.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="h4" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/giraffe.png"/>
+                <ImageBrush ImageSource="Images/8/giraffe.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="h5" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/gorilla.png"/>
+                <ImageBrush ImageSource="Images/8/gorilla.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="h6" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/snake.png"/>
+                <ImageBrush ImageSource="Images/8/snake.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="h7" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/8/Zebra.png"/>
+                <ImageBrush ImageSource="Images/8/Zebra.jpg"/>
             </Grid.Background>
         </Grid>
 
         <Grid Name="i1" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/chimpanzee.png"/>
+                <ImageBrush ImageSource="Images/9/chimpanzee.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i2" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/emu.png"/>
+                <ImageBrush ImageSource="Images/9/emu.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i3" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/hedgehog.png"/>
+                <ImageBrush ImageSource="Images/9/hedgehog.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i4" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/lemur.png"/>
+                <ImageBrush ImageSource="Images/9/lemur.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i5" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/leopard.png"/>
+                <ImageBrush ImageSource="Images/9/leopard.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i6" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/otter.png"/>
+                <ImageBrush ImageSource="Images/9/otter.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i7" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/toucan.png"/>
+                <ImageBrush ImageSource="Images/9/toucan.jpg"/>
             </Grid.Background>
         </Grid>
         <Grid Name="i8" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/9/turtle.png"/>
+                <ImageBrush ImageSource="Images/9/turtle.jpg"/>
             </Grid.Background>
         </Grid>
 
         <Grid Name="star1" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/score1.png"/>
+                <ImageBrush ImageSource="Images/score1-01.png"/>
             </Grid.Background>
             <Label x:Name="lblScore1" Content="Score: " HorizontalAlignment="Left" Margin="497,396,0,0" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="60" FontWeight="Bold" Foreground="#FF3A1F10" Visibility="Hidden"/>
         </Grid>
         <Grid Name="star2" Visibility="Hidden">
             <Grid.Background>
-                <ImageBrush ImageSource="Images/score2.png"/>
+                <ImageBrush ImageSource="Images/score2-01.png"/>
             </Grid.Background>
             <Label x:Name="lblScore2" Content="Score: " HorizontalAlignment="Left" Margin="497,396,0,0" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="60" FontWeight="Bold" Foreground="#FF3A1F10" Visibility="Hidden"/>
         </Grid>
@@ -401,6 +401,5 @@
                 <ImageBrush ImageSource="Images/exit.png"/>
             </Grid.Background>
         </Grid>
-        
     </Grid>
 </Window>
