Memory leak fixed

--- a/Hello.v2/MainWindow.xaml
+++ b/Hello.v2/MainWindow.xaml
@@ -7,399 +7,26 @@
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Hello.v2.MainWindow"
         mc:Ignorable="d" WindowState="Maximized" ResizeMode="NoResize" WindowStyle="None"
         Title="Hello Animal" Height="768" Width="1366" Loaded="WindowLoaded" Closing="WindowClosing">
-    <Grid Name="container">
-        <Grid Name="Mainmenu" Visibility="Visible">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images\Mainmenu-01.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="Help" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images\help-01.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="Level" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/stage.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="Credits" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/credit-01.png"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="a1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Cat.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="a2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Dogs.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="a3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Fox.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="a4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Horse.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="a5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Lion.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="a6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Monkey.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="a7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/1/Panda.jpg"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="b1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/camel.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="b2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/Crocodile.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="b3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/elephant.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="b4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/giraffe.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="b5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/gorilla.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="b6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/snake.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="b7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/2/Zebra.jpg"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="c1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/chimpanzee.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/emu.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/hedgehog.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/lemur.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/leopard.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/otter.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/toucan.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="c8" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/3/turtle.jpg"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="d1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/cat.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="d2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Dogs.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="d3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Fox.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="d4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Horse.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="d5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Lion.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="d6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Monkey.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="d7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/4/Panda.png"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="e1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/camel.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="e2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/crocodile.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="e3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/elephant.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="e4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/giraffe.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="e5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/gorilla.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="e6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/snake.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="e7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/5/Zebra.png"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="f1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/chimpanzee.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/emu.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/hedgehog.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/lemur.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/leopard.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/otter.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/toucan.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="f8" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/6/turtle.png"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="g1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Cat.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="g2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Dogs.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="g3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Fox.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="g4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Horse.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="g5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Lion.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="g6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Monkey.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="g7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/7/Panda.jpg"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="h1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/camel.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="h2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/crocodile.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="h3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/elephant.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="h4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/giraffe.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="h5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/gorilla.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="h6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/snake.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="h7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/8/Zebra.jpg"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="i1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/chimpanzee.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/emu.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/hedgehog.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i4" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/lemur.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i5" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/leopard.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i6" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/otter.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i7" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/toucan.jpg"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="i8" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/9/turtle.jpg"/>
-            </Grid.Background>
-        </Grid>
-
-        <Grid Name="star1" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/score1-01.png"/>
-            </Grid.Background>
-            <Label x:Name="lblScore1" Content="Score: " HorizontalAlignment="Left" Margin="497,396,0,0" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="60" FontWeight="Bold" Foreground="#FF3A1F10" Visibility="Hidden"/>
-        </Grid>
-        <Grid Name="star2" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/score2-01.png"/>
-            </Grid.Background>
-            <Label x:Name="lblScore2" Content="Score: " HorizontalAlignment="Left" Margin="497,396,0,0" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="60" FontWeight="Bold" Foreground="#FF3A1F10" Visibility="Hidden"/>
-        </Grid>
-        <Grid Name="star3" Visibility="Hidden">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/score-01.png"/>
-            </Grid.Background>
-            <Label x:Name="lblScore3" Content="Score: " HorizontalAlignment="Left" Margin="497,396,0,0" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="60" FontWeight="Bold" Foreground="#FF3A1F10" Visibility="Hidden"/>
-        </Grid>
-        <Grid Name="pause" Visibility="Hidden" Width="143" Height="57" Margin="10,10,1213,701">
-            <Grid.Background>
-                <ImageBrush ImageSource="Images/pause.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="pausemenu" Visibility="Hidden" Width="322" Height="344">
-            <Grid.Background>
+    <Canvas Name="container">
+        <Canvas.Background>
+            <ImageBrush ImageSource="Images/Score-01.png"/>
+        </Canvas.Background>
+        <Frame x:Name="Frame_Pausemenu" Content="" Height="342" Canvas.Left="503" Canvas.Top="243" Width="342" Visibility="Hidden">
+            <Frame.Background>
                 <ImageBrush ImageSource="Images/pausemenu.png"/>
-            </Grid.Background>
-        </Grid>
-        <Grid Name="exitprompt" Visibility="Hidden" Width="303" Height="188">
-            <Grid.Background>
+            </Frame.Background>
+        </Frame>
+        <Frame x:Name="Frame_Pause" Content="" Height="63" Canvas.Left="10" Canvas.Top="10" Width="153" Visibility="Hidden">
+            <Frame.Background>
+                <ImageBrush ImageSource="Images/pause.png"/>
+            </Frame.Background>
+        </Frame>
+        <Frame x:Name="Frame_ExitPrompt" Content="" Height="220" Canvas.Left="453" Canvas.Top="310" Width="419" Visibility="Hidden">
+            <Frame.Background>
                 <ImageBrush ImageSource="Images/exit.png"/>
-            </Grid.Background>
-        </Grid>
-    </Grid>
+            </Frame.Background>
+        </Frame>
+        <Label x:Name="lblScore" Content="Score: " Canvas.Left="576" Canvas.Top="427" Height="76" Width="191" Background="{x:Null}" FontSize="36" FontFamily="Segoe Print" Foreground="#FF30140B" FontWeight="Bold"/>
+
+    </Canvas>
 </Window>
